--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html >
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -14,6 +14,8 @@
     <title>React App</title>
   </head>
   <body>
+    <div id="backdrop-root"></div>
+    <div id="model-root"></div>
     <div id="root"></div>
   </body>
 </html>
